--- a/Dominantcolor.ipynb
+++ b/Dominantcolor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 228,
    "metadata": {
     "collapsed": true
    },
@@ -22,36 +22,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pix_val=list(im.getdata())\n"
+    "pix_val=list(im.getdata())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(181, 101, 210, 255)"
+       "(40, 40, 40, 255)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pix_val[15000]\n"
+    "pix_val[15000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "(65536, 3)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +112,8 @@
     "            for c in self.centroids:\n",
     "                original_centroid=prev_centroids[c]\n",
     "                current_centroid=self.centroids[c]\n",
+    "                m=max(np.median(original_centroid[original_centroid>0]),1)\n",
+    "                original_centroid[original_centroid==0]=m\n",
     "                if np.sum((current_centroid-original_centroid)/original_centroid*100.0) > self.tol:\n",
     "                    #print(np.sum((current_centroid-original_centroid)/original_centroid*100.0))\n",
     "                    optimized = False\n",
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 255,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 256,
    "metadata": {
     "collapsed": true
    },
@@ -165,54 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 257,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:27: RuntimeWarning: divide by zero encountered in divide\n",
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:27: RuntimeWarning: invalid value encountered in divide\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.fit(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.05125354,  0.        ,  0.87197732])"
+       "4"
       ]
      },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.centroids[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 181,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,29 +197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.5,  1.5,  2.5])"
+       "array([ 37.04944742,  36.9561495 ,  36.8950102 ])"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for x in range(len(clf.centroids[a])):\n",
+    "for x in range(len(clf.centroids[a])):       #to roundoff\n",
     "    clf.centroids[a][x]+=0.5\n",
     "clf.centroids[a]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual colour name: None , closest colour name: black\n"
+      "Actual colour name: None , closest colour name: darkslategray\n"
      ]
     }
    ],
@@ -285,104 +258,10 @@
     "        actual_name = None\n",
     "    return actual_name, closest_name\n",
     "\n",
-    "requested_colour = clf.centroids[a].astype(int)\n",
+    "requested_colour = [30,50,30]\n",
     "actual_name, closest_name = get_colour_name(requested_colour)\n",
     "\n",
     "print \"Actual colour name:\", actual_name, \", closest colour name:\", closest_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a={1,2,3}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1, 2, 3}"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a=[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object has no attribute '__getitem__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-135-394ba21d2aec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object has no attribute '__getitem__'"
-     ]
-    }
-   ],
-   "source": [
-    "a[0]+=1"
    ]
   },
   {
